# dependabot-reporter

./: .gitignore  Dockerfile  README.md  generate_report.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: image-build-scan.yml  multi-build.yaml
