[project]
name = "dependabot-reporter"
version = "0.1.2"
description = "Query GitHub Dependabot for security advisories and summarise to CSV"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
  "azure-storage-blob==12.27.1",
  "pygithub==2.8.1",
  "python-dotenv (==1.2.1)",
  "requests==2.32.5",
]

[dependency-groups]
dev = ["ipython>=9.7.0"]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]
