[project]
name = "dependabot-reporter"
version = "0.1.4"
description = "Query GitHub Dependabot for security advisories and summarise to CSV"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
  "python-dotenv==1.2.2",
  "azure-storage-blob==12.28.0",
  "pygithub==2.9.0",
  "requests==2.33.1",
]

[dependency-groups]
dev = ["ipython>=9.12.0"]

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = [
  "E501", # Line too long
  "E722", # Bare except
]
